Fix spacing of grid

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,6 +1,6 @@
 main {
   height: 100vh;
-  width: 100vw;
+  width: 98vw;
 }
 
 .header {
